@@ -1,3 +1,15 @@
+2003-05-28  Mikhael Goikhman  <migo@homemail.com>
+
+	* FvwmGtk/FvwmGtk.1:
+	* FvwmGtk/windowlist.c:
+	WindowListFunc is executed now within a window context,
+	so "WindowId $0" is not needed anymore in its definition.
+
+	* FvwmEvent/FvwmEvent.c:
+	* FvwmEvent/FvwmEvent.1:
+	window related event handlers are now executed within a window
+	context, so PassId is not really needed; several fixes
+
 2003-04-25  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmButtons/FvwmButtons.c (main):
